[project]
name = "dl-utils"
version = "0.3.0"
description = ""
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "Yaojie Shen", email = "syj.micro@outlook.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "filelock",
    "numpy",
    "joblib",
    "packaging",
    "tqdm",
    "matplotlib",
    "setuptools",
    "opencv-python",
    "torch",
    "tabulate",
    "lmdbm",
    "pandas",
    "rich>=14.3.4",
]

[project.optional-dependencies]
test = ["pytest"]
ollama = ["ollama"]
ray = ["ray"]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-rtd-theme",
    "sphinxcontrib-programoutput",
]

[project.urls]
source_code = "https://github.com/yaojie-shen/Deep-Learning-Utils"

[project.scripts]
inspect_data = "dl_utils.inspect_data_utils:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["venv*", "data*", "test*", "output*", "docs*"]
